--- a/english-for-kids/src/sass/base/_constants.scss
+++ b/english-for-kids/src/sass/base/_constants.scss
@@ -2,7 +2,7 @@ $menu-background: #cecdd8;
 $menu-links: #e8edf0;
 
 body {
-  margin-top: 10%;
+  margin-top: 8%;
 }
 .card__face {
   width: 16em;
@@ -99,6 +99,7 @@ section{
 span.game {
   display: inline-block;
   position: relative;
+  margin-bottom: 1%;
   bottom: 10px;
 	text-transform: uppercase;
 	font-size: 0.7rem;
