fix: gmae toggle

--- a/english-for-kids/src/style.scss
+++ b/english-for-kids/src/style.scss
@@ -13,6 +13,8 @@
 // @import "./sass/base/buttons";
 // @import "./sass/base/logo";
  @import "./sass/base/constants";
+ @import "./sass/base/burgerButton";
+ @import "./sass/base/gameToggler";
 // @import "./sass/base/tags";
 // @import "./sass/base/hamburger";
 // @import "./sass/base/modal";
