--- a/english-for-kids/src/sass/base/_constants.scss
+++ b/english-for-kids/src/sass/base/_constants.scss
@@ -1,13 +1,10 @@
-$menu-background: #cecdd8;
-$menu-links: #e8edf0;
-
+$menu-links: #FFF;
 body {
-  padding-top: 3%;
+  padding-top: 2rem;
 }
 
 .card {
   width: 16em;
-  margin: 0.2rem 0.2rem;
 
   &::before, &::after{
     content:"";
@@ -53,11 +50,6 @@ body {
   align-items: center;
 }
 
-.navbar-toggler {
-  margin-top: 1%;
-  margin-left: 1%;
-}
-
 .failedGame {
   z-index: 1000;
 }
@@ -78,13 +70,14 @@ body {
   height: 25px;
   padding-right: 5px;
 }
+.rotateButton {
+  margin: 5px;
+  width: 20px;
+  height: 20px;
+}
 
 .rotate {
   transform: rotateX( 360deg );
-}
-
-.navbar-toggler.rotate {
-  transform: rotate( 90deg );
 }
 
 .cursor-pointer {
@@ -115,78 +108,7 @@ body {
   text-decoration-color: $menu-links;
 }
 
-/**Switcher**/
-input[type="checkbox"] {
-  display: none; /* Hide the Checkbox */
-  position: absolute;
-  bottom: 10px;
-  left: 47%;
-}
-
-label { 
-  display: inline-block; /* Just for floating, "block" is okay a well*/
-  width: 100px;
-  height: 30px;
-  background: #f6f6f6;
-  border-radius: 30px;
-  border: 1px solid #bbb;
-  box-shadow: 0px 1px 3px 0px #aaa inset;
-  cursor: pointer;
-  margin: 0 15px;
-  transition: all 300ms ease;
-}
-
-#switch + label i {
-  display: block;
-  position: relative;
-  right: 0;
-  width: 30px;
-  height: 30px; 
-  border-radius: 50%;
-  box-shadow: 1px 0px 6px -2px #000, 0px 1px 0.6px 0px rgba(255,255,255,0.4) inset;
-  background: -webkit-radial-gradient(center, ellipse cover, rgb(10, 113, 145) 0%, rgb(10, 113, 145) 24%, rgb(10, 113, 145) 55%, rgb(10, 113, 145) 100%);
-  transition: all 300ms ease;
-}
-#switch:checked + label { /*When checkbox is checked.. style the next label*/
-background-color: #efefef;
-background-image: repeating-linear-gradient(45deg, transparent, transparent 15px, rgba(255,255,255,.5) 15px, rgba(255,255,255,.5) 30px);
-}
-#switch:checked + label i {
-  right: -70px; /*this will place the button tuo the right of the label.*/
-}
-
-section{
-  text-align: center;
-  box-sizing: border-box;
-  position: relative;
-}
-
-span.game {
-  display: inline-block;
-  position: relative;
-  margin-bottom: 1%;
-  bottom: 10px;
-	text-transform: uppercase;
-	font-size: 0.7rem;
-	font-weight: bold;
-	color: #999;
-	text-shadow: 0 1px 1px rgba(255,255,255,0.5), 0 -1px 1px rgba(0,0,0,0.1);
-  font-family: Arial, sans-serif;  
-}
-
-span.on {
-  left: -190px;  
-}
-
-#switch:checked ~ span.off {
-  text-shadow: 0px 0px 8px #2cad21, 0px 0px 8px #2cad21;
-}
-#switch:checked ~ span.on {
-  text-shadow: none;
-} 
-#switch ~ span.off {
-  text-shadow: none;
-}
-#switch ~ span.on {
-  text-shadow: 0px 0px 4px #bada55, 0px 0px 8px #bada55, 0px 0px 4px #bada55; 
+.sad {
+  width: 100%;
+  // height: 70%;
 }
