--- a/english-for-kids/src/sass/base/_constants.scss
+++ b/english-for-kids/src/sass/base/_constants.scss
@@ -1,41 +1,7 @@
-$menu-links: #FFF;
+@import "./colors"; 
+
 body {
   padding-top: 2rem;
-}
-
-.card {
-  width: 16em;
-
-  &::before, &::after{
-    content:"";
-    width: 0;
-    height: 5px;
-    position: absolute;
-    transition: all 0.2s linear;
-    background: #0c82c279;
-  }
-  
-  &:hover::before, &:hover::after{
-    width: 100%;
-  }
-
-  &::before, &::after{
-    transition-delay: 0.2s;
-  }
-
-  &::before{
-    right: 0;
-    top: 0;
-  }
-
-  &:after{
-    left: 0;
-    bottom: 0;
-  }
-
-  &:hover::before, &:hover::after{
-    transition-delay: 0s;
-  }
 }
 
 .container-fluid {
@@ -76,9 +42,36 @@ body {
   height: 20px;
 }
 
-.rotate {
-  transform: rotateX( 360deg );
+.rotate-right {
+  animation: rotate_right 0.25s;
+  backface-visibility: hidden;
 }
+.rotate-left {
+  animation: rotate_left 0.35s;
+  backface-visibility: hidden;
+}
+
+@keyframes rotate_right {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(90deg);
+  }
+}
+
+@keyframes rotate_left {
+  0% {
+    transform: rotateY(90deg);
+  }
+  100% {
+    transform: rotateY(0);
+  }
+}
+
+// .rotate {
+//   transform: rotateX(360deg);
+// }
 
 .cursor-pointer {
   cursor: pointer;
@@ -86,10 +79,10 @@ body {
 
 .nav-item:hover,
 .nav-item:focus {
-  color:rgba(41, 231, 152, 0.774);
-  background:rgb(108, 195, 230);
-  box-shadow:5px 5px 0 rgb(10, 129, 150) inset;
-  text-shadow:1px 1px 0 rgb(7, 63, 73);
+  color: $navigation-hover-color;
+  background: $navigation-hover-background;
+  box-shadow:5px 5px 0 $navigation-hover-box-shadow inset;
+  text-shadow:1px 1px 0 $navigation-hover-tex-shadow;
 }
 
 .h-0 {
@@ -105,10 +98,5 @@ body {
 }
 
 .active {
-  text-decoration-color: $menu-links;
-}
-
-.sad {
-  width: 100%;
-  // height: 70%;
+  text-decoration-color: #fff;
 }
