--- a/english-for-kids/src/style.scss
+++ b/english-for-kids/src/style.scss
@@ -1,34 +1,9 @@
 @import "./sass/bootstrap/bootstrap.scss";
 @import "./sass/bootstrap/custom";
 
-// @import "./sass/base/normalize";
-
-//Abstract
-// @import "./sass/abstract/constants";
-// @import "./sass/abstract/mixins";
-// @import "./sass/abstract/placeholders";
-
 //Base
-// @import "./sass/base/base";
-// @import "./sass/base/buttons";
-// @import "./sass/base/logo";
- @import "./sass/base/constants";
  @import "./sass/base/burgerButton";
  @import "./sass/base/gameToggler";
-// @import "./sass/base/tags";
-// @import "./sass/base/hamburger";
-// @import "./sass/base/modal";
-
-//Layouts
-// @import "./sass/layouts/wrapper";
-// @import "./sass/layouts/header";
-// @import "./sass/layouts/columns";
-// @import "./sass/layouts/footer";
-
-// Components
-// @import "./sass/components/contact-us";
-// @import "./sass/components/promo";
-// @import "./sass/components/navigation";
-// @import "./sass/components/tools";
-// @import "./sass/components/strategies";
-// @import "./sass/components/about-us";
+ @import "./sass/base/card";
+ @import "./sass/base/navigation";
+ @import "./sass/base/constants";
