--- a/movie-search/src/styles/_base.scss
+++ b/movie-search/src/styles/_base.scss
@@ -3,6 +3,7 @@
 body {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   margin: 0 auto;
   height: 100vh;
 }
@@ -10,7 +11,6 @@ body {
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 10px;
 }
 
 header {
