--- a/movie-search/src/styles/_footer.scss
+++ b/movie-search/src/styles/_footer.scss
@@ -2,7 +2,7 @@
 @import "./mixin";
 
 .footer {
-  width: 100vh;
+  width: 128vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -10,6 +10,7 @@
   .contact {
     display: flex;
     align-items: center;
+    margin: 10px;
     a {
       margin: 10px;
       text-decoration: none;
