--- a/movie-search/src/styles/_search.scss
+++ b/movie-search/src/styles/_search.scss
@@ -5,7 +5,7 @@
 	.search {
 		display: flex;
 		justify-content: space-between;
-		margin: 2%;
+		margin: 0 2% 2% 2%;
 		padding: 3px;
 		&.expand {
 			input {
