--- a/movie-search/src/styles/_slider.scss
+++ b/movie-search/src/styles/_slider.scss
@@ -1,5 +1,15 @@
 
 .swiper-container {
   width: 90%;
-  height: 500px;
+  height: 80%;
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
