--- a/movie-search/src/styles/_colors.scss
+++ b/movie-search/src/styles/_colors.scss
@@ -2,3 +2,7 @@ $background-primary-color: #094b5c;
 $background-secondary-color: #3b99b1;
 $fonts-light: #cee2e7;
 $fonts-dark: #274d57;
+$error-color: #bd0707;
+$key-color: #42687a;
+$loader-color: #ec407a;
+$loader-border-color: #42a5f5;
