--- a/movie-search/src/styles/_loader.scss
+++ b/movie-search/src/styles/_loader.scss
@@ -1,20 +1,22 @@
-@import "./colors";
-
 .loader {
   -webkit-animation: spin 1s linear infinite;
           animation: spin 1s linear infinite;
-  border: 3px solid #ddd;
-  border-top: 3px solid #42a5f5;
+  border: 3px solid $fonts-light;
+  border-top: 3px solid $loader-border-color;
   border-radius: 50%;
   margin: 3px;
   height: 35px;
   width: 35px;
-  display: none;
+}
+
+.error, .serching-for  {
+  text-align: center;
+  @include font-source-sans(false, $error-color);
 }
 
 @-webkit-keyframes spin {
   to {
-    border-top-color: #ec407a;
+    border-top-color: $loader-color;
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
@@ -22,7 +24,7 @@
 
 @keyframes spin {
   to {
-    border-top-color: #ec407a;
+    border-top-color: $loader-color;
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
