feat: create rate star

--- a/movie-search/src/styles/_slider.scss
+++ b/movie-search/src/styles/_slider.scss
@@ -18,6 +18,9 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .movie-poster {
