--- a/movie-search/src/styles/_slider.scss
+++ b/movie-search/src/styles/_slider.scss
@@ -12,12 +12,15 @@
     justify-content: center;
     align-items: center;
 
-    .movie-title, .movie-year, .movie-rate {
+    .movie-title, .movie-year {
       @include font-source-sans(false, $fonts-dark);
       width: 200px;
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
+    }
+    .movie-rate {
+      @include font-source-sans(false, $fonts-dark);
       display: flex;
       justify-content: center;
       align-items: center;
