fix: keyboard hover style

--- a/movie-search/src/styles/_keyboard.scss
+++ b/movie-search/src/styles/_keyboard.scss
@@ -32,7 +32,8 @@
             @include font-source-sans(false, $fonts-light);
             &:hover {
                 border-color: $fonts-light;
-                color: $fonts-light;
+                background-color: $fonts-light;
+                color: $fonts-dark;
                 cursor: pointer;
             }
         }
