fix: component styles

--- a/fancy-weather/src/style.scss
+++ b/fancy-weather/src/style.scss
@@ -5,4 +5,5 @@
 @import "./styles/controlBlock";
 @import "./styles/weather";
 @import "./styles/forecast";
-@import "./styles/map"
+@import "./styles/map";
+@import "./styles/icons";
