--- a/fancy-weather/src/styles/_app.scss
+++ b/fancy-weather/src/styles/_app.scss
@@ -1,30 +1,35 @@
 body {
-  height: 100vh;
-  width: 100%;
   .app {
-    display: flex;
-    flex-direction: column;
     background-repeat: no-repeat;
-    align-items: center;
-    justify-content: center;
     background-size: cover;
-    margin: 0 auto;
+    overflow: auto;
     height: 100vh;
-    width: 100%;
+    width: 100vw;
 
-    .content-box {
-      background-color: $component-background-color;
-      border-radius: 10px;
+    .wrapper {
       display: flex;
       flex-direction: column;
-      color: $select-color;
-      width: 80%;
-      padding: 20px;
-      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      align-self: center;
+      align-content: center;
+      padding: 5% 0;
 
-      @include media-tablet {
-        flex-direction: row;
+      .content-box {
+        background-color: $component-background-color;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: $select-color;
+        width: 80%;
+        padding: 20px;
+        justify-content: space-between;
+
+        @include media-tablet {
+          flex-direction: row;
+        }
       }
-    }
+  }
   }
 }
