--- a/fancy-weather/src/styles/_controlBlock.scss
+++ b/fancy-weather/src/styles/_controlBlock.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    align-items: center;
     width: 80%;
     background-color: $component-background-color;
     padding: 20px;
@@ -19,17 +20,35 @@
   }
 
   &_options-button {
+    &__lang, &__celsius, &__fahrenheit  {
+      @include buttons;
+    }
+    
     &__reload {
       @include buttons;
+
+      &__icon {
+        width: 30px;
+        height: 30px;
+      }
     }
-    &__celsius {
+    
+    &__search {
       @include buttons;
+
+      &__icon {
+        width: 30px;
+        height: 30px;
+      }
     }
-    &__fahrenheit {
+
+    &__micro {
       @include buttons;
-    }
-    &__lang, &__search, &__micro {
-      @include buttons;
+
+      &__icon {
+        width: 30px;
+        height: 30px;
+      }
     }
   }
 }
