--- a/fancy-weather/src/styles/_forecast.scss
+++ b/fancy-weather/src/styles/_forecast.scss
@@ -3,6 +3,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 20px;
+    width: 100%;
+    @include font($select-color, 20px, 600);
 
     @include media-tablet {
       flex-direction: row;
@@ -12,7 +15,6 @@
   &_weather {
     display: flex;
     flex-direction: column;
-    @include font (#f0f8ff, 15px, 600);
 
     @include media-tablet {
       flex-direction: row;
