--- a/fancy-weather/src/styles/_controlBlock.scss
+++ b/fancy-weather/src/styles/_controlBlock.scss
@@ -15,8 +15,35 @@
     }
   }
 
+  &_form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+
+    @include media-tablet {
+      flex-direction: row;
+      align-content: flex-end;
+      justify-content: flex-end;
+      margin: 0 0;
+    }
+  }
+
   &_options-container {
     display: flex;
+  }
+
+  &_search {
+    height: 48px;
+    width: 40%;
+    margin: 5px;
+    background-color: $component-background-color;
+    border: 0;
+    border-radius: 5px;
+    align-items: center;
+    color: $select-color;
+    @include font(#fff, 15px, 600);
+    padding-left: 10px;
   }
 
   &_options-button {
@@ -42,7 +69,7 @@
       }
     }
 
-    &__micro {
+    &__micro, &__play {
       @include buttons;
 
       &__icon {
