--- a/fancy-weather/src/styles/_forecast.scss
+++ b/fancy-weather/src/styles/_forecast.scss
@@ -15,6 +15,7 @@
   &_weather {
     display: flex;
     flex-direction: column;
+    max-width: 300px;
 
     @include media-tablet {
       flex-direction: row;
