--- a/fancy-weather/src/styles/_map.scss
+++ b/fancy-weather/src/styles/_map.scss
@@ -2,4 +2,7 @@
   width: 256px;
   height: 256px;
   padding-bottom: 10px;
+
+  &_image {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 75% 75%, 75% 100%, 50% 75%, 0% 75%);  }
 }
