--- a/fancy-weather/src/styles/_mixins.scss
+++ b/fancy-weather/src/styles/_mixins.scss
@@ -52,3 +52,19 @@
     cursor: pointer;
   }
 }
+
+@mixin animation {
+  animation: wiggle 1s infinite;
+
+  @keyframes wiggle {
+    0% {
+       transform:rotate(4deg);
+    }
+    50% {
+       transform:rotate(-4deg);
+    }
+    100% {
+       transform:rotate(4deg);
+    }
+}
+}
