feat: created spech recognition

--- a/fancy-weather/src/styles/_controlBlock.scss
+++ b/fancy-weather/src/styles/_controlBlock.scss
@@ -68,6 +68,11 @@
         height: 30px;
       }
     }
+  }
+
+  &_speak-button {
+    display: flex;
+    flex-direction: row;
 
     &__micro, &__play {
       @include buttons;
