--- a/fancy-weather/src/styles/_weather.scss
+++ b/fancy-weather/src/styles/_weather.scss
@@ -11,6 +11,8 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
+    width: 77%;
+    
     &__city {
       @include font($select-color, 1.5rem, 900);
 
